# apertium-bn-en

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  apertium-bn-en.bn-en.dix  apertium-bn-en.bn-en.t1x  apertium-bn-en.bn-en.t2x  apertium-bn-en.bn-en.t3x  apertium-bn-en.bn.dix  apertium-bn-en.bn.tsx  apertium-bn-en.en-bn.t1x  apertium-bn-en.en-bn.t2x  apertium-bn-en.en-bn.t3x  apertium-bn-en.en.dix  bn-en.prob  config  config.status  configure  configure.ac  dictionary_statistics.sh  en-bn.prob  inconsistency.sh  modes.xml  pending-tests.sh  regression-tests.sh  stamp-h1
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dev/: Makefile  Noun.class.php  Readme.txt  Verb.class.php  _20090605_2144.sql.tar.bz2  bn.hitparade.txt  clean.sh  conjugateVerb.php  country-list.xml  create-speling-from-paradef.py  freq.csv  generate-dix.sh  generateMeaningTable.php  inconsistency-summary.sh  inconsistency.sh  inflectNouns.php  levenshtein.py  loadFreq.php  paradigm-chopper.py  prune.py  quantitative_analysis.sh  seperateTaggedUntagged.sh  speling  speling-paradigms.py  spelingVerb  spellingFormatWrite.php  split-speling.py  taggedTrunkated  testvoc-summary.bn-en.txt  testvoc-summary.en-bn.txt  testvoc.sh  uniq.py  updateDatabase.php  verbs
dev/adjective/: adjective-extra.bn.speling  adjective.bn.dix  adjective.bn.expand  adjective.bn.speling  adjective.speling  create-adjective-dix.sh  create-speling-adjective.py  create_adjective_speling.py
dev/adverb/: adverb-extra.bn.list  adverb.bn.dix  adverb.bn.expand  adverb.bn.list  adverb.bn.speling  create-adverb-dix.sh  create-speling-adverb.py  speling-adverb  to-dix-quick.sh
dev/ankur-dix/: ankur-dix.dct
dev/bdix/: adjective.bdix  adjective.list  create-new-bdix-entry.sh  noun.bdix  noun.list  proper-noun.bdix  verb.list
dev/classes/: ConjugatorFactory.class.php  Misc.class.php  ParadefEatRule.class.php  ParadefGoRule.class.php  ParadefMakeDoRule.class.php  PardefShakeRule.class.php
dev/config/: PersistantConnection.class.php
dev/conjunction/: conjuction.bn.dix  conjuction.bn.list  conjuction.bn.speling  create-conjunction-dix.sh  to-dix-quick.sh
dev/database/: bdict.db  bn.hitparade.wiki.txt  generate-meaning-table.php  noun.db  populate-dictionary-table.php  populate-freq-table.php  seperateTaggedUntagged.sh  tagged.db  tags.txt  untagged.db
dev/db-backup/: bengali_conjugator_20090629_0023.sql.bz2  bengali_conjugator_20090630_1012.sql.bz2  bengali_conjugator_20090706_2032.sql.bz2  bengali_conjugator_20090707_1549.sql.bz2  bengali_conjugator_20090717_1704.sql.bz2  bengali_conjugator_20090722_2140.sql.bz2  bengali_conjugator_20090725_2051.sql.bz2  bengali_conjugator_20090726_0633.sql.bz2  bengali_conjugator_20090731_1712.sql.bz2  bengali_conjugator_20090802_1113.sql.bz2  bengali_conjugator_20090808_2214.sql.bz2  make_svn_fiendly_mysql_dump.py  restore-db-backup.sh  take-db-backup.sh
dev/determiner/: create-determiner-dix.sh  create-determiner-speling.sh  determiner.bn.dix  determiner.bn.expand  determiner.bn.speling  resultset.csv
dev/extract-tool/: apertium2extract.py  create-extract.sh  reformat.py
dev/nltk-crblp-corpus/: tag-details  tag-mapping
dev/noun/: Noun.class.php  create-monodix-noun-enclitic.py  create-noun-dix.sh  create-speling-noun-from-working-copy.py  createNounWorkingCopy.php  gerund.list  inflect-noun.py  inflectNouns.php  insert-from-extra-list.py  noun-extra.bn.list  noun.bn.dix  noun.bn.expand  noun.bn.speling  spelingNoun
dev/nounclasses/: NounConjugatorFactory.class.php  NounParadefBookRule.class.php  NounParadefKeyRule.class.php  NounParadefPenRule.class.php
dev/numerals/: create-numerals-dix.sh  create-numerals-speling.awk  numerals.bn.dix  numerals.bn.expand  numerals.bn.list  numerals.bn.speling
dev/postposition/: create-postposition-dix.sh  create-speling-postposition.py  postposition.bn.dix  postposition.bn.list  postposition.bn.speling  to-dix-quick.sh
dev/preposition/: create-spling-preposition.py  speling-preposition
dev/pronoun/: create-pronoun-dix.sh  create-speling-pronoun.py  pronoun.bn.dix  pronoun.bn.expand  pronoun.bn.speling  pronunSpeling
dev/proper-noun/: country-list  create-monodix-proper-noun-enclitic.py  create-proper-nound-dix.sh  create-speling-proper-noun.py  insert-country-list-into-database.py  proper-noun.bn.dix  proper-noun.bn.expand  speling-proper-noun
dev/tools/: expand-paradigms.py  fix-spelling.py  merge-expanded-dix.sh  relaxed-diff.py  split-expand.py
dev/unknown/: _20090802_1651-raw.list  _20090802_1651.list  diff.diff  insert-unknown-nouns-to-noun-source-freq.py  insert-unknown-proper-nouns-to-noun-source-freq.py  insert-unknowns-to-database.py  noun.list  process-unknown.py  unknown-edited.list  unknown.list  unknown.txt
dev/verb/: create-verb-dix.sh  (+10 more)
eval/: create-prothom-alo-corpora.sh
(+212 files in other folders)
